# oxool-community

./: .gitignore  .travis.yml  Makefile.am  PROBLEMS  README  README.md  autoclean.sh  autogen.sh  clean_jails_mounts.sh  configure.ac  discovery.xml  dist_git_hash  install_build_require_ubuntu.sh  loolstat  online.pc.in  online.service.in  oxool-systemplate-setup  oxool.pc.in  oxool.service  oxool.spec  oxool.spec.in  oxool.xml.in  oxoolkitconfig.xcu  oxoolwsd-generate-proof-key  oxoolwsd.service  oxoolwsd.spec.in  oxoolwsd.xml.in  startwsd.sh
common/: Authorization.cpp  Authorization.hpp  Clipboard.hpp  Common.cpp  Common.hpp  Crypto.cpp  FileUtil.cpp  FileUtil.hpp  JailUtil.cpp  JailUtil.hpp  JsonUtil.hpp  Log.cpp  Log.hpp  Makefile.am  Message.hpp  MessageQueue.cpp  MessageQueue.hpp  Png.hpp  Protocol.cpp  Protocol.hpp  Session.cpp  Session.hpp  SigUtil.cpp  SigUtil.hpp  StringVector.hpp  Unit.cpp  Unit.hpp  Util.cpp  Util.hpp  security.h
debian/: changelog  control  copyright  oxool-dev.install  oxool-modules.install  oxool.cron.d  oxool.install  oxool.postinst.in  oxool.postrm  oxool.preinst  oxool.service  rules
docker/: EL8  Ubuntu  dockerfile
docker/scripts/: install-oxoffice-online-el8.sh  install-oxoffice-online-ubuntu.sh  start-oxoffice-online.pl  start-oxoffice-online.sh
etc/cron.d/: oxool.cron
etc/sudoers.d/: lool
etc/sysconfig/: oxool  oxoolwsd
extensions/: Makefile.am  OxOOL-0.0.1.oxt  OxOOL-0.0.2.oxt
fonts/: 00-oxool.conf.in  50-oxool.conf  Makefile.am
kit/: ChildSession.cpp  ChildSession.hpp  ForKit.cpp  Kit.cpp  Kit.hpp  KitHelper.hpp  Makefile.am  SetupKitEnvironment.hpp  Watermark.hpp
loleaflet/: .gitignore  Makefile.am  README  bundle.js.m4  loleaflet-api.html  loleaflet-src.js.m4  npm-shrinkwrap.json.in  package.json
loleaflet/admin/: admin.html  admin.strings.js  adminAnalytics.html  adminBase.html  adminFontManager.html  adminHistory.html  adminLog.html  adminSettings.html  admintemplate.html  main-admin.js
loleaflet/css/: btns.css  color-palette.css  device-desktop.css  device-mobile.css  device-tablet.css  images.css  infobar.css  jquery.mCustomScrollbar.css  jsdialogs.css  jssidebar.css  leaflet.css  loleaflet.css  menubar.css  mobilewizard.css  notebookbar.css  override-vex.css  oxool.css  partsPreviewControl.css  selectionMarkers.css  spreadsheet.css  toolbar.css  w2ui-1.5.rc1.css
loleaflet/html/: debug.html  framed.doc.html  framed.html  load.doc.html  loleaflet-help.html  loleaflet.html.m4  multidocs.html
loleaflet/js/: Autolinker.js  global.js  main.js  toolbar.js  w2ui-1.5.rc1.js
loleaflet/l10n/: admin-localizations.json  localizations.json  locore-localizations.json  uno-localizations.json
loleaflet/node_shrinkwrap/: bootstrap-3.4.1.tgz  jquery-contextmenu-2.9.2.tgz  jquery-ui-touch-punch-0.2.3.tgz  smartmenus-1.1.0.tgz  spectrum-colorpicker2-2.0.0.tgz  spectrum-colorpicker2-2.0.8.tgz
loleaflet/po/: help-ab.po  help-af.po  help-am.po  help-ar.po  help-ast.po  (+204 more)
man/: oxoolconfig.1  oxoolconvert.1  oxoolforkit.1  oxoolwsd-generate-proof-key.1  oxoolwsd-systemplate-setup.1  oxoolwsd.1
net/: HttpRequest.hpp  Makefile.am  Socket.cpp  Socket.hpp  Ssl.cpp  Ssl.hpp  SslSocket.hpp  WebSocketHandler.hpp
scripts/: locorestrings.py  po2json.php  unocommands.py  unoparser.php  untranslated.py
src/: Makefile.am
src/development-tools/: Makefile.am  ModuleMaker.cpp
src/development-tools/module-template/: .gitignore  Makefile.am  ModuleConfiguration.md  README  README.md  autoclean.sh  autogen.sh  configure.ac  module.spec.in  module.xml.in  test.sh
src/development-tools/module-template/admin/: admin.html  localizations.json
src/development-tools/module-template/debian/: changelog  control  control.in  rules
src/development-tools/module-template/html/: index.html
src/development-tools/module-template/src/: Module.cpp  Module.hpp
src/include/: Makefile.am  oxoolmodule.h
src/include/OxOOL/: ConvertBroker.h  ENV.h  HttpHelper.h  L10NTranslator.h  Logger.h  ModuleManager.h  OxOOL.h  OxOOL.h.in  Util.h  XMLConfig.h
src/include/OxOOL/Module/: Base.h  Map.h
src/include/OxOOL/Net/: PrivateKeyHandler.h  Util.h
src/include/OxOOL/Util/: FileValidator.h  OptionlValidator.h
src/lib/: Makefile.am
src/lib/OxOOL/: ConvertBroker.cpp  ENV.cpp  HttpHelper.cpp  L10NTranslator.cpp  Logger.cpp  ModuleManager.cpp  Util.cpp  XMLConfig.cpp
src/lib/OxOOL/Module/: Base.cpp  Map.cpp
src/lib/OxOOL/Net/: Util.cpp
src/lib/OxOOL/Util/: FileValidator.cpp  OptionlValidator.cpp
src/modules/Announce/: Announce.xml  Makefile.am
src/modules/Announce/src/: Announce.cpp
src/modules/ModuleTesting/: Makefile.am  ModuleTesting.xml
src/modules/ModuleTesting/src/: ModuleTesting.cpp
src/modules/alive/: Makefile.am  alive.xml
src/modules/alive/src/: Alive.cpp
src/tools/: Makefile.am  ModuleMaker.cpp  XmlConfig.cpp
src/tools/module-template/admin/: admin.js
src/tools/module-template/admin/l10n/: zh_TW.json
src/tools/module-template/src/: OxModule.cpp
support/: Makefile.am
test/: Makefile.am  TileCacheTests.cpp  UnitAdmin.cpp  UnitBadDocLoad.cpp  UnitClose.cpp  UnitCursor.cpp  UnitInsertDelete.cpp  UnitLoad.cpp  UnitPasswordProtected.cpp  UnitRenderingOptions.cpp  UnitSession.cpp  UnitTyping.cpp  UnitWOPIWatermark.cpp  WhiteBoxTests.cpp  WopiTestServer.hpp  helpers.hpp  test.cpp
tools/: Config.cpp  Connect.cpp  KitClient.cpp  Stress.cpp  Tool.cpp  WebSocketDump.cpp  map.cpp  mount.cpp
wsd/: Admin.cpp  Admin.hpp  AdminModel.cpp  AdminModel.hpp  Auth.cpp  Auth.hpp  ClientSession.cpp  ClientSession.hpp  DocumentBroker.cpp  DocumentBroker.hpp  FileServer.cpp  FileServer.hpp  FileServerUtil.cpp  HostUtil.cpp  HostUtil.hpp  LOOLWSD.cpp  LOOLWSD.hpp  MainLOOLWSD.cpp  Makefile.am  OxOOLPrivateKeyHandler.hpp  ProofKey.cpp  ProxyProtocol.cpp  ProxyProtocol.hpp  ProxyRequestHandler.cpp  QuarantineUtil.cpp  README  RequestDetails.cpp  RequestDetails.hpp  SenderQueue.hpp  ServerURL.hpp  Storage.cpp  Storage.hpp  TileCache.cpp  TileCache.hpp  TileDesc.hpp  TraceFile.hpp  lint-discovery.py  metrics.txt  protocol.txt  reference.md
(+301 files in other folders)
